sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not found: value int
		if (plusPetitQue(int i, int i + 1)==true){
                                 ^AlgBubbleSort1:7: error: not found: value int
		if (plusPetitQue(int i, int i + 1)==false){
                                 ^AlgBubbleSort1:8: error: not found: value int
			echange(int i, int i + 1);
                                ^